[gd_scene load_steps=15 format=3 uid="uid://bwfxph7d4jmpq"]

[ext_resource type="Script" uid="uid://daop7mxyflghs" path="res://Scripts/Menu/MainMenu.gd" id="1_28flt"]
[ext_resource type="Texture2D" uid="uid://blxb3x2y8v3mn" path="res://Textures/Menu/Selector/SelectorAlt.png" id="2_1ehe0"]
[ext_resource type="FontFile" uid="uid://sfccyaw2qoa0" path="res://Textures/Text/MainFont.png" id="2_48xlc"]
[ext_resource type="AudioStream" uid="uid://cme4tdvjcxb2g" path="res://Audio/SFX/Menu/Navigate.ogg" id="2_n45e2"]
[ext_resource type="AudioStream" uid="uid://0daxo7fi7a3b" path="res://Audio/SFX/Menu/Select.ogg" id="3_opfnp"]
[ext_resource type="AudioStream" uid="uid://dpgafs08cf4mg" path="res://Audio/SFX/Menu/Fail.ogg" id="4_opfnp"]
[ext_resource type="Shader" uid="uid://15fmh2tvigsh" path="res://Resources/Shaders/Format.gdshader" id="5_16hvj"]
[ext_resource type="Texture2D" uid="uid://emeverf4gwoj" path="res://Textures/Menu/Logo.png" id="6_vr1f0"]
[ext_resource type="Texture2D" uid="uid://rvwsj4og8koj" path="res://Textures/Text/Title.png" id="7_vr1f0"]
[ext_resource type="Texture2D" uid="uid://bhvg0b8hfxaut" path="res://Textures/Menu/NinePatch.png" id="7_yhxw7"]
[ext_resource type="Texture2D" uid="uid://dsy15aggor000" path="res://Textures/Menu/Selector/SelectorSmall.png" id="8_trj04"]

[sub_resource type="Gradient" id="Gradient_vr1f0"]
offsets = PackedFloat32Array(0, 0.25, 0.75, 1)
colors = PackedColorArray(0.14509805, 0.1764706, 0.20392157, 1, 0.28627452, 0.3137255, 0.34509805, 1, 0.28627452, 0.3137255, 0.34509805, 1, 0.14509805, 0.1764706, 0.20392157, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_t1dhk"]
gradient = SubResource("Gradient_vr1f0")
height = 360

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t1dhk"]
shader = ExtResource("5_16hvj")
shader_parameter/colors = PackedColorArray(0.14509805, 0.1764706, 0.20392157, 1, 0.14509805, 0.1764706, 0.20392157, 1, 0.14509805, 0.1764706, 0.20392157, 1, 0.14509805, 0.1764706, 0.20392157, 1, 0.14509805, 0.1764706, 0.20392157, 1, 0.14509805, 0.1764706, 0.20392157, 1, 0.14509805, 0.1764706, 0.20392157, 1, 0.14509805, 0.1764706, 0.20392157, 1)

[node name="MainMenu" type="Node"]
script = ExtResource("1_28flt")

[node name="Nav" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("2_n45e2")
bus = &"SFX"

[node name="Select" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("3_opfnp")
bus = &"SFX"

[node name="Fail" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("4_opfnp")
bus = &"SFX"

[node name="Background" type="TextureRect" parent="."]
offset_left = 160.0
offset_right = 480.0
offset_bottom = 360.0
texture = SubResource("GradientTexture2D_t1dhk")

[node name="Eye" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_t1dhk")
offset_left = 240.0
offset_top = 32.0
offset_right = 400.0
offset_bottom = 96.0
texture = ExtResource("6_vr1f0")

[node name="Title" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_t1dhk")
offset_left = 196.0
offset_top = 96.0
offset_right = 444.0
offset_bottom = 180.0
texture = ExtResource("7_vr1f0")

[node name="BuildVersion" type="Label" parent="."]
offset_top = 350.0
offset_right = 70.0
offset_bottom = 360.0
theme_override_colors/font_color = Color(0.14509805, 0.1764706, 0.20392157, 1)
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 10
text = "V 1.0.0-ALPHA"

[node name="Cursor" type="TextureRect" parent="."]
offset_left = 413.0
offset_top = 232.0
offset_right = 421.0
offset_bottom = 240.0
rotation = 1.5707964
texture = ExtResource("2_1ehe0")

[node name="Highlight" type="ColorRect" parent="Cursor"]
show_behind_parent = true
layout_mode = 1
offset_left = -6.0
offset_top = 6.0
offset_right = 14.0
offset_bottom = 186.0
color = Color(0.14509805, 0.1764706, 0.20392157, 1)

[node name="Mirror" type="TextureRect" parent="Cursor"]
layout_mode = 0
offset_top = 184.0
offset_right = 8.0
offset_bottom = 192.0
texture = ExtResource("2_1ehe0")
flip_v = true

[node name="New" type="Label" parent="."]
offset_left = 240.0
offset_top = 228.0
offset_right = 400.0
offset_bottom = 248.0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 20
text = "NEW GAME"
horizontal_alignment = 1

[node name="Continue" type="Label" parent="."]
offset_left = 240.0
offset_top = 252.0
offset_right = 400.0
offset_bottom = 272.0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 20
text = "CONTINUE"
horizontal_alignment = 1

[node name="Settings" type="Label" parent="."]
offset_left = 240.0
offset_top = 276.0
offset_right = 400.0
offset_bottom = 296.0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 20
text = "SETTINGS"
horizontal_alignment = 1

[node name="Quit" type="Label" parent="."]
offset_left = 240.0
offset_top = 300.0
offset_right = 400.0
offset_bottom = 320.0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 20
text = "QUIT"
horizontal_alignment = 1

[node name="WarningPanel" type="NinePatchRect" parent="."]
visible = false
offset_left = 185.0
offset_top = 128.0
offset_right = 455.0
offset_bottom = 233.0
texture = ExtResource("7_yhxw7")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Cursor" type="TextureRect" parent="WarningPanel"]
layout_mode = 0
offset_left = 129.0
offset_top = 90.0
offset_right = 137.0
offset_bottom = 98.0
texture = ExtResource("8_trj04")

[node name="Highlight" type="ColorRect" parent="WarningPanel/Cursor"]
show_behind_parent = true
layout_mode = 1
offset_left = -110.0
offset_top = -1.0
offset_right = 2.0
offset_bottom = 9.0
color = Color(0.22352941, 0.2509804, 0.2784314, 1)

[node name="Title" type="Label" parent="WarningPanel"]
layout_mode = 0
offset_left = 35.0
offset_top = 5.0
offset_right = 235.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 20
text = " WARNING!"
horizontal_alignment = 1

[node name="Message" type="Label" parent="WarningPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 30.0
offset_right = 265.0
offset_bottom = 70.0
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 10
text = "STARTING A NEW GAME WILL OVERWRITE ALL PREVIOUS SAVE DATA

CONTINUE?"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Cancel" type="Label" parent="WarningPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 90.0
offset_right = 130.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 10
text = "NO"
horizontal_alignment = 1

[node name="Continue" type="Label" parent="WarningPanel"]
layout_mode = 0
offset_left = 140.0
offset_top = 90.0
offset_right = 250.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 10
text = "YES"
horizontal_alignment = 1

[node name="NamePanel" type="NinePatchRect" parent="."]
visible = false
offset_left = 185.0
offset_top = 151.0
offset_right = 455.0
offset_bottom = 211.0
texture = ExtResource("7_yhxw7")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Timer" type="Timer" parent="NamePanel"]
wait_time = 0.167
one_shot = true

[node name="Highlight" type="ColorRect" parent="NamePanel"]
layout_mode = 1
offset_left = 5.0
offset_top = 20.0
offset_right = 265.0
offset_bottom = 40.0
color = Color(0.22352941, 0.2509804, 0.2784314, 1)

[node name="Cursor" type="TextureRect" parent="NamePanel"]
visible = false
layout_mode = 0
offset_left = 129.0
offset_top = 45.0
offset_right = 137.0
offset_bottom = 53.0
texture = ExtResource("8_trj04")

[node name="Highlight" type="ColorRect" parent="NamePanel/Cursor"]
show_behind_parent = true
layout_mode = 1
offset_left = -110.0
offset_top = -1.0
offset_right = 2.0
offset_bottom = 9.0
color = Color(0.22352941, 0.2509804, 0.2784314, 1)

[node name="Message" type="Label" parent="NamePanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 265.0
offset_bottom = 15.0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 10
text = "WHAT IS YOUR NAME?"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Namespace" type="Label" parent="NamePanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 20.0
offset_right = 265.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 20
text = "............"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Cancel" type="Label" parent="NamePanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 45.0
offset_right = 130.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 10
text = "BACK"
horizontal_alignment = 1

[node name="Continue" type="Label" parent="NamePanel"]
layout_mode = 0
offset_left = 140.0
offset_top = 45.0
offset_right = 250.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 10
text = "CONFIRM"
horizontal_alignment = 1
